remove base url

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ title: Foundersclub Freibrug
 subtitle: "Der Gründerclub in Freiburg"
 url: "http://ndrewtl.github.io" # the base hostname & protocol for your site
 # baseurl: "/the/subpath/of/your/site" # Set this value to "" if you want your site to be root
-baseurl: ""
+baseurl: "/foundersclub-frei"
 cover: "/assets/cover.png"
 logo: "/assets/logo.png"
 
