--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ keep_files:
 # Site settings
 title: Lokalrunde Freiburg
 subtitle: "Die Lokalrunde in Freiburg"
-url: "http://hochschulgruppen-freiburg.me/" # the base hostname & protocol for your site
+url: "https://foundersclub-freiburg.github.io" # the base hostname & protocol for your site
 # baseurl: "/the/subpath/of/your/site" # Set this value to "" if you want your site to be root
 baseurl: "foundersclub-freiburg.de/"
 cover: "/assets/cover.png"
