--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ title: Lokalrunde Freiburg
 subtitle: "Die Lokalrunde in Freiburg"
 url: "https://foundersclub-freiburg.github.io" # the base hostname & protocol for your site
 # baseurl: "/the/subpath/of/your/site" # Set this value to "" if you want your site to be root
-baseurl: "foundersclub-freiburg.de/"
+baseurl: "/"
 cover: "/assets/cover.png"
 logo: "/assets/logo.png"
 
